# RipuLimiter

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  JUCE  RipuLimiter.jucer
.github/workflows/: ci.yml
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: LevelMeter.h  Limiter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SoftClipper.h  UI.cpp  UI.h
Source2/: LevelMeter.h  PluginProcessor.h
